--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,15 @@
-//plugins {
-//    id 'java'
-//    id 'org.springframework.boot' version '3.3.5'
-//    id 'io.spring.dependency-management' version '1.1.6'
-//}
-//
-//group = 'labs.spring'
-//version = '0.0.1-SNAPSHOT'
-//
-//java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(21)
-//    }
-//}
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
-//    implementation 'org.mapstruct:mapstruct:1.6.2'
-//    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-//    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
-//    compileOnly 'org.projectlombok:lombok:1.18.34'
-//    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-//    runtimeOnly 'org.postgresql:postgresql'
-//    annotationProcessor 'org.projectlombok:lombok:1.18.34'
-//    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-//    testImplementation 'org.springframework.security:spring-security-test'
-//    testImplementation 'org.testcontainers:junit-jupiter'
-//    testImplementation 'org.testcontainers:postgresql'
-//}
-//
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'jacoco'
 }
 
-group = 'com.example'
+jacoco {
+    toolVersion = "0.8.8"
+}
+
+group = 'labs.spring'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -61,35 +24,84 @@ configurations {
     }
 }
 
+jacocoTestReport {
+    dependsOn test
+
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = file("$buildDir/reports/jacoco")
+    }
+}
+
+ext {
+    // Minimal Coverage
+    minimumCoveragePerFile = 0.01
+    filesExcludedFromCoverage = [
+            "**/*MarketApplication.*",
+            "**/config/*Configuration.*",
+            "**/domain/",
+            "**/dto/"
+    ]
+}
+
 repositories {
     mavenCentral()
 }
 
+apply from: "${rootProject.projectDir}/gradle/test.gradle"
+apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"
+
 dependencies {
+    // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+
+    // Jakarta Validation API
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+
+    // MapStruct for object mapping
     implementation 'org.mapstruct:mapstruct:1.6.2'
-    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
+
+    // Lombok for reducing boilerplate code
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     compileOnly 'org.projectlombok:lombok:1.18.34'
-    compileOnly 'org.mapstruct:mapstruct:1.6.2'
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    testImplementation 'org.projectlombok:lombok:1.18.34'
+
+    // Database driver
+    implementation 'org.postgresql:postgresql'
+    //runtimeOnly 'org.postgresql:postgresql'
+
+    // Test and Mocking Libraries
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'org.wiremock:wiremock-jetty12:3.9.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // OpenAPI Documentation
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.springdoc:springdoc-openapi-starter-common:2.1.0'
+
+    //test containers
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+
