IT tests removed

--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -7,6 +7,16 @@ jacoco {
 
 tasks.register('integrationTest', Test) {
     description = "Defines the test type 'integrationTest' for thin integration test"
+
+    // Disable the task if no integration tests are present
+    enabled = !fileTree("src/integrationTest/java").isEmpty()
+
+    maxParallelForks = 4
+    filter {
+        includeTestsMatching '*IT'
+    }
+
+    finalizedBy tasks.jacocoIntegrationTestReport // report is always generated after tests run
 }
 
 jacocoTestCoverageVerification {
@@ -79,4 +89,3 @@ integrationTest {
 
 jacocoTestCoverageVerification.dependsOn jacocoTestReport
 test.dependsOn jacocoIntegrationTestReport
-
