--- a/build.gradle
+++ b/build.gradle
@@ -53,46 +53,28 @@ apply from: "${rootProject.projectDir}/gradle/test.gradle"
 apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"
 
 dependencies {
-    // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
-    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-
-    // Jakarta Validation API
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
-
-    // MapStruct for object mapping
     implementation 'org.mapstruct:mapstruct:1.6.2'
+    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
-
-    // Lombok for reducing boilerplate code
-    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
     compileOnly 'org.projectlombok:lombok:1.18.34'
+    compileOnly 'org.mapstruct:mapstruct:1.6.2'
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
-    testImplementation 'org.projectlombok:lombok:1.18.34'
-
-    // Database driver
-    implementation 'org.postgresql:postgresql'
-    //runtimeOnly 'org.postgresql:postgresql'
-
-    // Test and Mocking Libraries
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.4'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation 'org.wiremock:wiremock-jetty12:3.9.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // OpenAPI Documentation
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.springdoc:springdoc-openapi-starter-common:2.1.0'
-
 }
 
 tasks.named('test') {
