--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=space-cats-ecommerce
-feature.cosmoCats.enabled=true
-feature.kittyProducts.enabled=false
+#logging.level.org.springframework=DEBUG
+application.feature.toggles.cosmoCats=true
+application.feature.toggles.kittyProducts=false
 
+#application.feature.toggles.cosmoCats.enabled=true
+#application.feature.toggles.kittyProducts.enabled=false
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
