--- a/src/main/resources/api-specs/api-docs.yaml
+++ b/src/main/resources/api-specs/api-docs.yaml
@@ -3,23 +3,23 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:8080
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 paths:
   /api/v1/products/{id}:
     get:
       tags:
-        - product-controller
+      - product-controller
       summary: Retrieve a product by ID
       description: Returns a single product by its unique ID.
       operationId: getProductById
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "404":
           description: Product not found
@@ -35,17 +35,17 @@ paths:
                 $ref: "#/components/schemas/ProductDTO"
     put:
       tags:
-        - product-controller
+      - product-controller
       summary: Update an existing product
       description: Updates an existing product with the specified ID.
       operationId: updateProduct
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       requestBody:
         content:
           application/json:
@@ -67,17 +67,17 @@ paths:
                 $ref: "#/components/schemas/ProductDTO"
     delete:
       tags:
-        - product-controller
+      - product-controller
       summary: Delete a product by ID
       description: Deletes a product with the specified ID.
       operationId: deleteProduct
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "204":
           description: Product deleted successfully
@@ -86,7 +86,7 @@ paths:
   /api/v1/products:
     get:
       tags:
-        - product-controller
+      - product-controller
       summary: Retrieve all products
       description: Returns a list of all available products.
       operationId: getAllProducts
@@ -101,7 +101,7 @@ paths:
                   $ref: "#/components/schemas/ProductDTO"
     post:
       tags:
-        - product-controller
+      - product-controller
       summary: Create a new product
       description: Creates a new product with the given details.
       operationId: createProduct
@@ -122,7 +122,7 @@ paths:
   /api/v1/customers:
     get:
       tags:
-        - customer-controller
+      - customer-controller
       operationId: getAllCustomers
       responses:
         "200":
@@ -133,7 +133,7 @@ paths:
                 $ref: "#/components/schemas/CustomerDetailsListDto"
     post:
       tags:
-        - customer-controller
+      - customer-controller
       operationId: createCustomer
       requestBody:
         content:
@@ -148,17 +148,50 @@ paths:
             application/hal+json:
               schema:
                 $ref: "#/components/schemas/CustomerDetailsDto"
+  /api/v1/spaceCats:
+    get:
+      tags:
+      - space-cat-controller
+      operationId: getAllSpaceCats
+      responses:
+        "200":
+          description: OK
+          content:
+            application/hal+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SpaceCat"
+  /api/v1/spaceCats/{id}:
+    get:
+      tags:
+      - space-cat-controller
+      operationId: getSpaceCatById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            application/hal+json:
+              schema:
+                $ref: "#/components/schemas/SpaceCat"
   /api/v1/greetings/{name}:
     get:
       tags:
-        - greeting-controller
+      - greeting-controller
       operationId: getCustomerById
       parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: name
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -169,15 +202,15 @@ paths:
   /api/v1/customers/{id}:
     get:
       tags:
-        - customer-controller
+      - customer-controller
       operationId: getCustomerById_1
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "200":
           description: OK
@@ -189,10 +222,10 @@ components:
   schemas:
     ProductDTO:
       required:
-        - id
-        - name
-        - price
-        - type
+      - id
+      - name
+      - price
+      - type
       type: object
       properties:
         id:
@@ -205,9 +238,9 @@ components:
         type:
           type: string
           enum:
-            - COSMIC_CATNIP
-            - NEBULA_NAPPING_PODS
-            - PLASMA_PAW_WARMERS
+          - COSMIC_CATNIP
+          - NEBULA_NAPPING_PODS
+          - PLASMA_PAW_WARMERS
         price:
           minimum: 0
           type: number
@@ -218,10 +251,10 @@ components:
           type: string
     CustomerDetailsDto:
       required:
-        - address
-        - email
-        - name
-        - phoneNumber
+      - address
+      - email
+      - name
+      - phoneNumber
       type: object
       properties:
         name:
@@ -241,6 +274,18 @@ components:
           type: array
           items:
             type: string
+    SpaceCat:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        planet:
+          type: string
+        breed:
+          type: string
     CustomerDetailsEntry:
       type: object
       properties:
