--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=space-cats-ecommerce
 #logging.level.org.springframework=DEBUG
-application.feature.toggles.cosmoCats=true
+application.feature.toggles.cosmoCats=false
 application.feature.toggles.kittyProducts=false
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
