lab3 initial commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=space-cats-ecommerce
 #logging.level.org.springframework=DEBUG
-application.feature.toggles.cosmoCats=false
+application.feature.toggles.cosmoCats=true
 application.feature.toggles.kittyProducts=false
+application.payment-service.payments=/payments/process
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
