--- a/src/main/resources/liquibase/db.changelog-init-category.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-category.yaml
@@ -26,3 +26,17 @@ databaseChangeLog:
             tableName: category
             columnNames: name
             constraintName: uq_category_name
+        - createIndex:
+            tableName: category
+            indexName: idx_category_name
+            columns:
+              - name: name
+        - createSequence:
+            sequenceName: category_id_seq
+            startValue: 1
+            incrementBy: 1
+        - addAutoIncrement:
+            tableName: category
+            columnName: id
+            incrementBy: 1
+            startWith: 1
