--- a/src/main/resources/liquibase/db.changelog-init-customers.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-customers.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: lab-3-1
+      id: customers-table-init
       author: oksana
       changes:
         # Create sequence for Customer ID
