--- a/src/main/resources/liquibase/db.changelog-init-orders-entry.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-orders-entry.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: lab-3-3
+      id: orders-entry-table-init
       author: oksana
       changes:
         # Create the order_entry table with sequence for 'id' and foreign key to 'orders'
