--- a/src/main/resources/liquibase/db.changelog-init-orders-entry.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-orders-entry.yaml
@@ -2,6 +2,7 @@ databaseChangeLog:
   - changeSet:
       id: orders-entry-table-init
       author: oksana
+      runOnChange: true
       changes:
         # Create the order_entry table with sequence for 'id' and foreign key to 'orders'
         - createTable:
