--- a/src/main/resources/liquibase/db.changelog-init-category.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-category.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: category-table-init
+      id: category-1
       author: oksana
       changes:
         - createTable:
@@ -8,35 +8,27 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: BIGINT
+                  type: bigint
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
               - column:
                   name: name
-                  type: VARCHAR(255)
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
                   name: description
-                  type: TEXT
+                  type: text
                   constraints:
                     nullable: true
-        - addUniqueConstraint:
-            tableName: category
-            columnNames: name
-            constraintName: uq_category_name
-        - createIndex:
-            tableName: category
-            indexName: idx_category_name
-            columns:
-              - name: name
+
+  - changeSet:
+      id: category-2
+      author: oksana
+      changes:
         - createSequence:
             sequenceName: category_id_seq
             startValue: 1
             incrementBy: 1
-        - addAutoIncrement:
-            tableName: category
-            columnName: id
-            incrementBy: 1
-            startWith: 1
