--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/space_cats
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.drop-first=true
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=validate
 
 #spring.jpa.properties.hibernate.cache.use_second_level_cache=false
