--- a/src/main/resources/liquibase/db.changelog-init-category.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-category.yaml
@@ -18,6 +18,7 @@ databaseChangeLog:
                   type: varchar(255)
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: description
                   type: text
@@ -32,3 +33,24 @@ databaseChangeLog:
             sequenceName: category_id_seq
             startValue: 1
             incrementBy: 1
+            cacheSize: 50
+
+  - changeSet:
+      id: category-3
+      author: oksana
+      changes:
+        - addUniqueConstraint:
+            tableName: category
+            columnNames: name
+            constraintName: unique_category_name
+
+  - changeSet:
+      id: category-4
+      author: oksana
+      changes:
+        - createIndex:
+            tableName: category
+            indexName: idx_category_name
+            columns:
+              - column:
+                  name: name
