--- a/src/main/resources/liquibase/db.changelog-init-product.yaml
+++ b/src/main/resources/liquibase/db.changelog-init-product.yaml
@@ -20,7 +20,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: type
-                  type: varchar(255)
+                  type: smallint
                   constraints:
                     nullable: false
               - column:
@@ -61,20 +61,21 @@ databaseChangeLog:
             incrementBy: 1
 
   - changeSet:
-      id: product-alter-type
+      id: product-4
       author: oksana
       changes:
-        - modifyDataType:
+        - addUniqueConstraint:
             tableName: product
-            columnName: type
-            newDataType: smallint
-            customChange: "USING type::smallint"
+            columnNames: name, category_id
+            constraintName: unique_product_name_per_category
 
   - changeSet:
-      id: product-alter-price
+      id: product-5
       author: oksana
       changes:
-        - modifyDataType:
+        - createIndex:
             tableName: product
-            columnName: price
-            newDataType: float
+            indexName: idx_product_name
+            columns:
+              - column:
+                  name: name
